--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .body{
-    margin: 0;
+    margin: auto;
     padding: 0;
     width: 100%;
     height: 2200px;
@@ -48,7 +48,7 @@
 
 
 .head{
-    width: 920px;
+    width: 940px;
     height: 100px;
     border: 4px solid red;
     box-shadow: 5px 5px 10px 4px black;
