--- a/new.css
+++ b/new.css
@@ -103,7 +103,7 @@
     border-left: 1px solid black;
     display: flex;
     margin: auto;
-    background-color: white;
+    background-color: yellow;
 }
 
 .claim div a{
